--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="./footy-simple-blue.ico">
+    <link rel="icon" href="./LaterLadder-favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&family=Roboto&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?&family=Inter:wght@100..900&family=League+Gothic&display=swap" rel="stylesheet">
     <title>My AFL Ladder</title>
   </head>
   <body>
