--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -7,12 +7,12 @@
     <link rel="icon" href="./LaterLadder-favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?&family=Inter:wght@100..900&family=League+Gothic&display=swap" rel="stylesheet">
-    <title>My AFL Ladder</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:wght@100..900&family=League+Gothic&family=League+Spartan:wght@100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <title>Later Ladder</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but My AFL Ladder doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Later Ladder doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
