Add web app manifest

--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A web application for tracking AFL team standings">
     <meta name="theme-color" content="#031745">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Later Ladder">
     <link rel="manifest" href="./manifest.json">
     <link rel="icon" href="./favicon.png">
